# namecoin-legacy

./: .gitignore  .gitmodules  COPYING  DESIGN-namecoin.md  DEVELOPMENT-PROCESS.md  FAQ.md  LICENSE  Makefile  Makefile.am  README.md  TODO-namecoin  VERSION  base58.h  buildsys.mk.in  changelog.md  config.sub  configure.ac  db.cpp  db.h  extra.mk.in  headers.h  hjasdjdf  hook.cpp  hook.h  init.cpp  irc.cpp  main.cpp  main.h  makefile.unix  namecoin-qt.pro  namecoin.cpp  namecoin.h  net.cpp  net.h  rpc.cpp  run_qmake.bat  script.cpp  serialize.h  util.cpp
build-aux/m4/: ax_boost_base.m4  ax_boost_filesystem.m4
client/: README.md  ncproxy  socks.py  socks5.py
client/DNS/: Base.py  Lib.py  Type.py  __init__.py  lazy.py
client/jsonrpc/: __init__.py  cgiwrapper.py  json.py  modpywrapper.py  proxy.py  serviceHandler.py
client/jsonrpc/_tests/: __init__.py  test_cgiwrapper.py  test_json.py  test_modpywrapper.py  test_proxy.py  test_serviceHandler.py
contrib/: .gitignore  merged-mine-proxy  nmcsh  setup_script.iss
contrib/easywinbuilder/: 1a_environment_mingw.bat  1b_environment_qt.bat  3c_build_miniupnpc.bat  4a_build_daemon.bat  4b_build_qt.bat  6_gather_dlls.bat  README.md  __everything_from_after_unpack_easywinbuilder.bat  __rebuild_daemon_and_qt.bat  build_dep.sh  hash_daemon.sh  hash_qt.sh  patch_files.sh  set_vars.bat  unpack.sh
doc/: README_merged-mining.md  autotools-build.txt  build-osx.md  build-osx.txt  build-unix.md  build-unix.txt
docs/: vincent.gpg
libs/: .gitignore  readme.txt
m4/: boost.m4  buildsys.m4
project/: namecoin-qt.pro  run_qmake.bat
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.include  Makefile.osx  allocators.h  auxpow.cc  auxpow.cpp  auxpow.h  base58.h  bitcoinrpc.cc  bitcoinrpc.cpp  bitcoinrpc.h  crypter.cc  crypter.h  db.cc  db.cpp  db.h  headers.h  hook.cpp  hook.h  init.cc  init.cpp  init.h  irc.cc  irc.cpp  key.cc  key.cpp  key.h  keystore.cc  keystore.cpp  keystore.h  main.cc  main.cpp  main.h  makefile.linux-mingw  makefile.mingw  makefile.osx  makefile.unix  namecoin.cc  (+24 more)
src/CMakeModules/: FindBerkeleyDB.cmake
src/cryptopp/: config.h  cpu.cc  sha.cc
src/json/: json_spirit_reader.cc  json_spirit_value.cc  json_spirit_writer.cc
src/m4/: bitcoin_find_bdb48.m4  namecoin_subdir_to_include.m4
src/qt/: Makefile.am  aboutdialog.cc  aboutdialog.cpp  addressbookpage.cc  addresstablemodel.cc  addresstablemodel.cpp  askpassphrasedialog.cc  askpassphrasedialog.cpp  bitcoin.cc  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cc  bitcoingui.cc  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cc  bitcoinstrings.cpp  bitcoinunits.cc  bitcoinunits.cpp  clientmodel.cc  clientmodel.cpp  configurenamedialog.cc  configurenamedialog.cpp  configurenamedialog.h  csvmodelwriter.cc  editaddressdialog.cc  editaddressdialog.cpp  guiconstants.h  guiutil.cc  guiutil.cpp  guiutil.h  managenamespage.cc  managenamespage.cpp  managenamespage.h  monitoreddatamapper.cc  nametablemodel.cc  nametablemodel.cpp  (+43 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  configurenamedialog.ui  managenamespage.ui  optionsdialog.ui  overviewpage.ui  qrcodedialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_nb.ts  bitcoin_nl.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_ru.ts  bitcoin_sk.ts  (+7 more)
src/qt/res/: bitcoin-qt.rc
src/qt/res/icons/: bitcoin.icns
src/qt/test/: Makefile.am  test_main.cc  test_main.cpp  uritests.cc
src/test/: Makefile.am  test_bitcoin.cc  test_namecoin.cpp  uint160_tests.cc  uint256_tests.cc  uint256_tests.cpp
